--- a/ok01.html
+++ b/ok01.html
@@ -3,10 +3,12 @@
 <head>
 	<title>Lesson 1 OK01</title>
 	<link href="stylesheet.css" rel="Stylesheet" type="text/css" />
+	<script language="javascript" type="text/javascript" src="jquery-1.12.3.min.js"></script>
 	<script language="javascript" type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div id="contentAll">
+		<div id="rpiSelectForm"></div>
 		<div id="courseHead">
 			<h1>
 				Lesson 1 OK01</h1>
@@ -83,15 +85,16 @@ Makefile</pre>
 				<p>
 					Copy the following instruction.</p>
 				<div class="armCodeBlock"><p>
-					ldr r0,=0x20200000
+					ldr r0,=<span class="gpioControllerAddr">0x20200000</span>
 				</p></div>
 				<div class="commandBox"><p>
 					<span class="armCodeInline">ldr reg,=val</span> puts the number <span class="armCodeInline">
 						val</span> into the register named <span class="armCodeInline">reg</span>.</p></div>
 				<p>
-					That is our first command. It tells the processor to store the number 0x20200000
+					That is our first command. It tells the processor to store the number
+					<span class="gpioControllerAddr">0x20200000</span>
 					into the register r0. I shall need to answer two questions here, what is a register,
-					and how is 0x20200000 a number?</p>
+					and how is <span class="gpioControllerAddr">0x20200000</span> a number?</p>
 				<div class="informationBox"><p>
 					A single register can store any integer between 0 and 4,294,967,295 inclusive on
 					the Raspberry Pi, which might seem like a large amount of memory, but it is only
@@ -106,7 +109,8 @@ Makefile</pre>
 					I've used r0 in this example, but I could very well have used any of the others.
 					As long as you're consistent, it doesn't matter.</p>
 				<p>
-					0x20200000 is indeed a number. However it is written in Hexadecimal notation. To
+					<span class="gpioControllerAddr">0x20200000</span> is indeed a number.
+					However it is written in Hexadecimal notation. To
 					learn more about hexadecimal expand the box below:</p>
 				<div class="expandableHeader" onclick="return ExpandToggle('hex')">
 					<p>
@@ -157,8 +161,8 @@ Makefile</pre>
 						very useful because every hexadecimal digit is exactly four binary digits long.
 						This has the nice side effect that a lot of computer numbers are round numbers in
 						hexadecimal, even though they're not in decimal. For example, in the assembly code
-						just above I used the number 20200000<sub>16</sub>. If I had chose to write this
-						in decimal it would have been 538968064<sub>10</sub>, which is much less memorable.
+						just above I used the number <span class="gpioControllerAddrSub">20200000</span><sub>16</sub>. If I had chose to write this
+						in decimal it would have been <span class="gpioControllerAddrSubDec">538968064</span><sub>10</sub>, which is much less memorable.
 					</p>
 					<p>
 						To convert numbers from decimal to hexadecimal I find the following method easiest:</p>
@@ -180,12 +184,12 @@ Makefile</pre>
 						&times;16<sup>0</sup> = 2&times;256 + 3&times;16 + 7&times;1 = 512 + 48 + 7 = 567.</p>
 				</div>
 				<p>
-					So our first command is to put the number 20200000<sub>16</sub> into r0. That doesn't
+					So our first command is to put the number <span class="gpioControllerAddrSub">20200000</span><sub>16</sub> into r0. That doesn't
 					sound like it would be much use, but it is. In computers, there are an awful lot
 					of chunks of memory and devices. In order to access them all, we give each one an
 					address. Much like a postal address or a web address this is just a means of identifying
 					the location of the device or chunks of memory we want. Addresses in computers are
-					just numbers, and so the number 20200000<sub>16</sub> happens to be the address
+					just numbers, and so the number <span class="gpioControllerAddrSub">20200000</span><sub>16</sub> happens to be the address
 					of the GPIO controller. This is just a design decision taken by the manufacturers,
 					they could have used any other address (providing it didn't conflict with anything
 					else). I know this address only because I looked it up in a manual<a class="noteLink"
@@ -202,8 +206,8 @@ Makefile</pre>
 					needs a few numbers in order to understand what to do.</p>
 				<div class="armCodeBlock"><p>
 					mov r1,#1<br />
-					lsl r1,#18<br />
-					str r1,[r0,#4]<br />
+					lsl r1,#<span class="actLedGpfselBit">18</span><br />
+					str r1,[r0,#<span class="actLedGpfselAddr">4</span>]<br />
 				</p></div>
 				<div class="commandBox"><p>
 					<span class="armCodeInline">mov reg,#val</span> puts the number <span class="armCodeInline">
@@ -217,13 +221,13 @@ Makefile</pre>
 						class="armCodeInline">reg</span> at the address given by <span class="armCodeInline">
 							dest</span> + <span class="armCodeInline">val</span>.</p></div>
 				<p>
-					These commands enable output to the 16th GPIO pin. First we get a necessary value
+					These commands enable output to the <span class="actLedPinOrd">16th</span> GPIO pin. First we get a necessary value
 					in r1, then send it to the GPIO controller. Since the first two instructions are
 					just trying to get a value into r1, we could use another <span class="armCodeInline">
 						ldr</span> command as before, but it will be useful to us later to be able to
 					set any given GPIO pin, so it is better to deduce the value from a formula than
-					write it straight in. The OK LED is wired to the 16th GPIO pin, and so we need to
-					send a command to enable the 16th pin.</p>
+					write it straight in. The OK LED is wired to the <span class="actLedPinOrd">16th</span> GPIO pin, and so we need to
+					send a command to enable the <span class="actLedPinOrd">16th</span> pin.</p>
 				<p>
 					The value in r1 is needed to enable the LED pin. The first line puts the number
 					1<sub>10</sub> into r1. The <span class="armCodeInline">mov</span> command is faster
@@ -244,7 +248,8 @@ Makefile</pre>
 					The second instruction is <span class="armCodeInline">lsl</span> or logical shift
 					left. This means shift the binary representation for the first argument left by
 					the second argument. In this case this will shift the binary representation of 1<sub>10</sub>
-					(which is 1<sub>2</sub>) left by 18 places (making it 1000000000000000000<sub>2</sub>=262144<sub>10</sub>).</p>
+					(which is 1<sub>2</sub>) left by <span class="actLedGpfselBit">18</span> places (making it <span class="actLedGpfselBitShiftBin">1000000000000000000</span><sub>2</sub>
+					=<span class="actLedGpfselBitShiftDec">262144</span><sub>10</sub>).</p>
 				<p>
 					If you are unfamiliar with binary, expand the box below:</p>
 				<div class="expandableHeader" onclick="return ExpandToggle('binary')">
@@ -307,42 +312,45 @@ Makefile</pre>
 					of the GPIO pin. The first 4 relate to the first 10 GPIO pins, the second 4 relate
 					to the next 10 and so on. There are 54 GPIO pins, so we need 6 sets of 4 bytes,
 					which is 24 bytes in total. Within each 4 byte section, every 3 bits relates to
-					a particular GPIO pin. Since we want the 16th GPIO pin, we need the second set of
-					4 bytes because we're dealing with pins 10-19, and we need the 6th set of 3 bits,
-					which is where the number 18 (6&times;3) comes from in the code above.</p>
+					a particular GPIO pin. Since we want the <span class="actLedPinOrd">16th</span> GPIO pin, we need the <span class="actLedSetOrd">second</span> set of
+					4 bytes because we're dealing with pins <span class="actLedPinRange">10-19</span>, and we need the <span class="actLedGpfselBitSetOrd">6th</span> set of 3 bits,
+					which is where the number <span class="actLedGpfselBit">18</span> (<span class="actLedGpfselBitSet">6</span>&times;3) comes from in the code above.</p>
 				<p>
 					Finally the <span class="armCodeInline">str</span> 'store register' command stores
 					the value in the first argument, <span class="armCodeInline">r1</span> into the
 					address computed from the expression afterwards. The expression can be a register,
 					in this case <span class="armCodeInline">r0</span>, which we know to be the GPIO
 					controller address, and another value to add to it, in this case <span class="armCodeInline">
-						#4</span>. This means we add 4 to the GPIO controller address and write the
+					#<span class="actLedGpfselAddr">4</span></span>. This means we add
+					<span class="actLedGpfselAddr">4</span> to the GPIO controller address and write the
 					value in <span class="armCodeInline">r1</span> to that location. This happens to
-					be the location of the second set of 4 bytes that I mentioned before, and so we
-					send our first message to the GPIO controller, telling it to ready the 16th GPIO
+					be the location of the <span class="actLedSetOrd">second</span> set of 4 bytes that I mentioned before, and so we
+					send our first message to the GPIO controller, telling it to ready the <span class="actLedPinOrd">16th</span> GPIO
 					pin for output.</p>
 				<h2 id="signlife">
 					5 A Sign Of Life</h2>
 				<p>
-					Now that the LED is ready to turn on, we need to actually turn it on. This means
+					Now that the LED is ready to turn on, we need to actually turn it on.
+					<span class="actLedTurnPinOnParagraph">This means
 					sending a message to the GPIO controller to turn pin 16 off. Yes, <em>turn it off</em>.
 					The chip manufacturers decided it made more sense<a class="noteLink" name="note5a"
 						href="#note5" title="Note 5"><sup>[5]</sup></a> to have the LED turn on when
 					the GPIO pin is off. Hardware engineers often seem to take these sorts of decisions,
-					seemingly just to keep OS Developers on their toes. Consider yourself warned.</p>
+					seemingly just to keep OS Developers on their toes. Consider yourself warned.</span></p>
 				<div class="armCodeBlock"><p>
 					mov r1,#1<br />
-					lsl r1,#16<br />
-					str r1,[r0,#40]<br />
+					lsl r1,#<span class="actLedPin32bitOffset">16</span><br />
+					str r1,[r0,#<span class="actLedTurnOnAddr">40</span>]<br />
 				</p></div>
 				<p>
 					Hopefully you should recognise all of the above commands, if not their values. The
-					first puts a 1 into <span class="armCodeInline">r1</span> as before. The second
+					first puts a 1 into <span class="armCodeInline">r1</span> as before.
+					<span class="actLedOk01OnExplanation">The second
 					shifts the binary representation of this 1 left by 16 places. Since we want to turn
 					pin 16 off, we need to have a 1 in the 16th bit of this next message (other values
 					would work for other pins). Finally we write it out to the address which is 40<sub>10</sub>
 					added to the GPIO controller address, which happens to be the address to write to
-					turn a pin off (28 would turn the pin on).</p>
+					turn a pin off (28 would turn the pin on).</span></p>
 				<h2 id="happy">
 					6 Happily Ever After</h2>
 				<p>
@@ -429,7 +437,7 @@ Makefile</pre>
 						it, but, if you must, it can be found here <a class="icon-pdf" href="downloads/SoC-Peripherals.pdf"
 							title="Broadcom BCM2835 ARM Peripherals">SoC-Peripherals.pdf</a>. For added
 							confusion, the manual uses a different addressing system. An address listed as
-							0x7E200000 would be 0x20200000 in our OS.</li>
+						<span class="gpioControllerCpuDoc">0x7E200000</span> would be <span class="gpioControllerAddr">0x20200000</span> in our OS.</li>
 					<li><a name="note4" /><sup>[4]<a class="noteBackLink" href="#note4a">^</a></sup> Only
 						values which have a binary representation which only has 1s in the first 8 bits
 						of the representation. In other words, 8 1s or 0s followed by only 0s.</li>
